--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,8 +1,8 @@
 // Body
-$body-bg: url(images/nursery_image1.jpg);
+$body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: "Raleway", sans-serif;
+$font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
